--- a/life/modernized/02-chapter-1.adoc
+++ b/life/modernized/02-chapter-1.adoc
@@ -1,9 +1,18 @@
 == Chapter 1.
 
-Her birth--Early preservation and visitation--Removal to Worcester--Visit of
-Elizabeth Ashbridge and Sarah Worral--Removed to the Isle of Man--Her exercises
-there--Returns to England--Decease of her father--Settles a while at Lancaster--First
-appears in the ministry at Worcester.--Welch Yearly Meeting--Settles in Wiltshire.
+[.chapter-synopsis]
+* Her birth
+* Early preservation and visitation
+* Removal to Worcester
+* Visit of Elizabeth Ashbridge and Sarah Worral
+* Removed to the Isle of Man
+* Her exercises there
+* Returns to England
+* Decease of her father
+* Settles a while at Lancaster
+* First appears in the ministry at Worcester
+* Welch Yearly Meeting
+* Settles in Wiltshire.
 
 Sarah Stephenson,
 some of the occurrences of whose life are related in the following pages,
