--- a/life/modernized/03-chapter-2.adoc
+++ b/life/modernized/03-chapter-2.adoc
@@ -1,8 +1,13 @@
 == Chapter II.
 
-Visits Cumberland--Western counties--First engaged in a family
-visit--Goes to the men`'s meeting at Lavington--Exercises and relief,
-with reflections--Death of a young child, a relation--Account of meetings in Wiltshire.
+[.chapter-synopsis]
+* Visits Cumberland
+* Western counties
+* First engaged in a family visit
+* Goes to the men`'s meeting at Lavington
+* Exercises and relief, with reflections
+* Death of a young child, a relation
+* Account of meetings in Wiltshire.
 
 It appears by the foregoing relation,
 that Sarah Stephenson first appeared as a public minister in Worcester in the year 1767,
