--- a/life/modernized/04-chapter-3.adoc
+++ b/life/modernized/04-chapter-3.adoc
@@ -1,8 +1,16 @@
 == Chapter III.
 
-Visit to Wales, Cheshire, Lancashire, etc.--To Dorset, Hants, London,
-etc.--Dorset and Somerset--Circular Meeting--London--Family visit in Wilts--Devonshire
-and Cornwall--Indisposition and exercise--Family visits in London--In Bristol.
+[.chapter-synopsis]
+* Visit to Wales, Cheshire, Lancashire, etc.
+* To Dorset, Hants, London, etc.
+* Dorset and Somerset
+* Circular Meeting
+* London
+* Family visit in Wilts
+* Devonshire and Cornwall
+* Indisposition and exercise
+* Family visits in London
+* In Bristol.
 
 In the fifth month, 1772,
 Sarah Stephenson obtained the certificate of her Monthly Meeting,
