--- a/life/modernized/05-chapter-4.adoc
+++ b/life/modernized/05-chapter-4.adoc
@@ -1,13 +1,21 @@
 == Chapter IV.
 
-Visits Leicestershire,
-Nottinghamshire--Families at Sheffield--Ackworth
-school--Ill at Leeds--Visits families there,
-and at Lancaster--Thomas Gawthorp--Westmoreland, Cumberland,
-and Scotland---families there--And at Newcastle,
-Shields and Sunderland--Mabel Wigham--Visits Durham--Families at Kendal--And a second
-time at Lancaster--Coalbrookdale and North Wales--A meeting in a graveyard,
-Builth--Three of her written memorandums.
+[.chapter-synopsis]
+* Visits Leicestershire, Nottinghamshire
+* Families at Sheffield
+* Ackworth school
+* Ill at Leeds
+* Visits families there, and at Lancaster
+* Thomas Gawthorp
+* Westmoreland, Cumberland, and Scotland-families there
+* And at Newcastle, Shields and Sunderland
+* Mabel Wigham
+* Visits Durham
+* Families at Kendal
+* And a second time at Lancaster
+* Coalbrookdale and North Wales
+* A meeting in a graveyard, Builth
+* Three of her written memorandums.
 
 Early in the spring of 1780, Sarah Stephenson set out, with due credentials,
 according to the good order of the Society, on a long journey,
