--- a/life/original/01-preface.adoc
+++ b/life/original/01-preface.adoc
@@ -49,4 +49,5 @@ and the editor has sometimes taken the liberty of
 a little varying the phrase of the parts,
 where the narration runs in the first person; and now and then of supplying a few words.
 
+[.signed-section-context-close]
 8th of the First month, 1807.
