--- a/life/original/06-chapter-5.adoc
+++ b/life/original/06-chapter-5.adoc
@@ -1,9 +1,11 @@
 == Chapter V.
 
-Visits families at Worcester,
-and in her own Monthly Meeting--Visits Ireland with Hannah
-Bevington--Decease of Isaac Gray--Meets with Thomas Cash,
-John Pemberton and Thomas Ross--Various family visits, particularly at Cork.
+[.chapter-synopsis]
+* Visits families at Worcester, and in her own Monthly Meeting
+* Visits Ireland with Hannah Bevington
+* Decease of Isaac Gray
+* Meets with Thomas Cash, John Pemberton and Thomas Ross
+* Various family visits, particularly at Cork.
 
 The occurrences of the years 1782 and 1783, of which any account is preserved, are few.
 Early in the former year, our friend visited the families of Friends in Worcester,
