--- a/life/original/12-philadelphia-testimony.adoc
+++ b/life/original/12-philadelphia-testimony.adoc
@@ -1,3 +1,4 @@
+[#testimony2, short="Testimony of Philadelphia Meeting"]
 == Testimony of the Monthly Meeting of Philadelphia, for the Southern District, held the 26th of the first month, 1803, respecting Sarah Stephenson.
 
 We are engaged to give a short account of our beloved deceased friend, Sarah Stephenson;
