--- a/life/modernized/02-chapter-1.adoc
+++ b/life/modernized/02-chapter-1.adoc
@@ -78,7 +78,7 @@ This was coming a little to the gate of stripping, which work went gradually for
 but great were my trials, both from within and without.
 Indeed my conflicts were so great, that I might say, '`I ate my bread with mourning,
 and mingled my drink with tears;`'--but then, O,
-what precious meetings I had at times! my spirit was so broken,
+what precious meetings I had at times! My spirit was so broken,
 that I could scarcely contain myself.
 Here were also several weighty valuable friends, whose sympathy with me was great,
 and was a comfort to me.
@@ -149,7 +149,7 @@ where I was received by my near relations with affection;
 but my new situation opened new trials.
 Here I was as one alone, and viewed myself like a sparrow upon the house-top,
 a pelican in the wilderness, or an owl in the desert.
-O, the many exercises I passed through! the Lord only knows them;
+O, the many exercises I passed through! The Lord only knows them;
 but my prayers being strong to him for preservation,
 he was pleased to hear my cry and at seasons to feed and comfort my needy soul.
 I found my safety to depend on keeping much inward, and not mixing with the people;
@@ -281,7 +281,7 @@ I was then sweetly comforted,
 and being favoured with the unity of the Lord`'s faithful servants,
 it was very strengthening to my doubting mind.
 
-"`After staying a week or two sit Worcester, my dear mother gradually getting better,
+"`After staying a week or two at Worcester, my dear mother gradually getting better,
 we set out for Wilts, and remaining a few weeks there,
 I left my mother finely recovered at my uncle John Fry`'s,
 and went to see my relations in Bristol.
@@ -307,4 +307,4 @@ O my soul, may you ever fear, and walk reverently before Him who is the dread of
 "`I returned pretty directly from this meeting to Bristol,
 with the reward of sweet peace for this little service.
 After staying there some months, I had a letter from my uncle John Fry,
-requesting I would come to Sutton, where he resided, which 1 did.`"
+requesting I would come to Sutton, where he resided, which I did.`"
