--- a/life/modernized/03-chapter-2.adoc
+++ b/life/modernized/03-chapter-2.adoc
@@ -176,7 +176,7 @@ soul more clearly into things of this nature,
 that I may be prepared for my final change.
 
 "`Second month, 1772.
-My cousin Jefferys`' daughter Catherine was taken ill, and remained so several days.
+My cousin Jeffery`'s daughter Catherine was taken ill, and remained so several days.
 She was a child uncommonly ripe for her age.
 +++[+++Probably not more than four years old.]
 The sweetness of her disposition was extraordinary, and her patience in sickness,
