--- a/life/modernized/04-chapter-3.adoc
+++ b/life/modernized/04-chapter-3.adoc
@@ -85,7 +85,7 @@ The certificate which she had obtained for this visit,
 had been addressed to Friends in London and parts adjacent.
 On her return in the tenth month,
 she gave an account of the different parts which she had visited,
-and though some of them,
+and though some of them
 must have appeared to be rather beyond what might be called adjacent,
 her account was satisfactory to the meeting.
 
@@ -139,8 +139,8 @@ This caused a fear, lest,
 when I was brought to the balance of the sanctuary I should be found lacking.
 But my spirit was so enclosed in Divine sweetness, that, with brokenness of heart,
 I was enabled to adore my Maker, and pray for the continuance of his mercy and judgment,
-that thereby my soul might become so refined, that when it pleased him to say.
-Time here to you must be no longer, I may not be found lacking; but,
+that thereby my soul might become so refined, that when it pleased him to say,
+"`Time here to you must be no longer,`" I may not be found lacking; but,
 through the deep in-working of his holy Spirit, and the abounding of his mercy,
 forgiveness and great lovingkindness,
 through the mediation of our dear Lord and Saviour, Jesus Christ,
