--- a/life/modernized/05-chapter-4.adoc
+++ b/life/modernized/05-chapter-4.adoc
@@ -151,7 +151,7 @@ but I suffered the discourager to come in,
 and gave Friends leave to appoint some meetings forward,
 thinking if the concern respecting Lancaster continued, we might return.
 We stayed the meetings at Lancaster on first-day, in which we had an open time.
-Severak states were opened before me, and I was enabled to deliver what was given me,
+Several states were opened before me, and I was enabled to deliver what was given me,
 with strength, and I trust, with life.
 The next day, we went to Yelland, and had close labour there; then to Height.
 In the meeting there, but little light was to be felt:
@@ -196,7 +196,7 @@ and a belief was fixed with me,
 that he would soon be removed from works to a joyful reward.
 We afterwards heard that he remained about two months and then sweetly departed.
 
-"`On sixth-day the--of eighth month, we were at the week-day meeting at Kendal,
+"`On sixth-day, the -- of eighth month, we were at the week-day meeting at Kendal,
 in which strength was given to point out the danger of a worldly spirit,
 even among the well-minded, if not guarded against.
 Next day we went to Moreland, and had a meeting, in which we were led into close labour,
@@ -286,7 +286,7 @@ We had an old leaky boat, contrary winds, and a rough sea;
 so that our passage was attended with some danger;
 but through the preserving power of Him who formerly uttered the language of '`Peace,
 be still,`' we were favoured to get safely on shore after a passage
-of about three hours and a half My dear companion and John Rutty,
+of about three hours and a half. My dear companion and John Rutty,
 (a lad who rode before Sarah Stephenson,) were very sick,
 so that they were not so sensible of the danger as I was.
 Some of the waves were so great that it seemed as if we should be swallowed up in them.
@@ -327,7 +327,7 @@ She is a noble warrior in the Lamb`'s warfare,
 and seems to be more constantly dwelling with her Master than most.
 
 "`From Newcastle, we went to Sunderland, where we were deeply baptized for the dead, and,
-thereby 1 trust, fitted to labour and deal plainly; but we found a remnant,
+thereby I trust, fitted to labour and deal plainly; but we found a remnant,
 who retain their integrity.
 May they be preserved.
 There were upwards of twenty families.
@@ -417,7 +417,7 @@ and had a public meeting in the evening in the town-hall.
 In this meeting Truth arose, but my mind was not clear of the people,
 but felt that we must have another meeting, which was a close exercise,
 as my companions expressed no concern of that sort.
-Before I gave up to mention it, I was quite ill; when`" on my telling the cause,
+Before I gave up to mention it, I was quite ill; when on my telling the cause,
 they readily consented to stay,
 and another meeting was appointed to begin at nine o`'clock on first-day morning.
 We had a very solid, favoured meeting, after which my mind was much relieved.
