--- a/life/modernized/06-chapter-5.adoc
+++ b/life/modernized/06-chapter-5.adoc
@@ -114,8 +114,8 @@ It was an open time, and I hope satisfactory.
 We were at our valuable friend Gervas Johnson`'s,
 where Isaac Gray had died the second-day before.
 The being there so soon after his death afresh affected our minds; may we learn,
-under proving dispensations to say.
-Not our wills, but yours, O Lord, be done.
+under proving dispensations to say,
+'`Not our wills, but yours, O Lord, be done.`'
 We afterwards went to Dungannon, and from there to Ballyhagen.
 Thomas Cash of Morley, in Cheshire, who had been Isaac Gray`'s companion,
 was with us there at meeting, a season owned by the Master.
@@ -370,8 +370,8 @@ O, my soul,
 may you be more and more centered in humble devotedness to the requirings of your God,
 who is worthy forever, to be served, worshipped, and adored!
 
-"`We have now gone through great part of the families, and have cause to say.
-Hitherto the Lord has helped us.
+"`We have now gone through great part of the families, and have cause to say,
+'`Hitherto the Lord has helped us.`'
 Indeed he has enabled me to deal plainly, and honestly to discharge my duty;
 and I hope we have left an open door for such as may come after us.
 We also visited the families at Garryrone, to our satisfaction,
