--- a/life/modernized/09-chapter-8.adoc
+++ b/life/modernized/09-chapter-8.adoc
@@ -59,7 +59,7 @@ will show her feelings at the outset.
 
 My spirit rejoices at being favoured with the unity of the brethren.
 It is a great strength in low dipping seasons, which are often my portion.
-We have now entered the principality,1 cousin Mary Jefferys and myself;
+We have now entered the principality, cousin Mary Jefferys and myself;
 and our kind friend Joseph Naish, of Congersbury, in Somersetshire, has, I think,
 freely given up to accompany us into North Wales.
 The prospect of this mountainous country, the season of the year,
@@ -75,7 +75,7 @@ not in all the earth, anything that they desire in comparison of him.
 In the twelfth month, she had accomplished her visit,
 and intimated to her Monthly Meeting that she had been divinely
 helped to pursue the prospects before her.
-The lonely situation of Friends in North Whales, seems to have excited her sympathy,
+The lonely situation of Friends in North Wales, seems to have excited her sympathy,
 as was the case on a former visit,
 and she reminded her friends at home of their superior accommodations,
 as a cause for gratitude on their part.
