--- a/life/modernized/10-chapter-9.adoc
+++ b/life/modernized/10-chapter-9.adoc
@@ -231,7 +231,7 @@ but not of long continuance.
 Indeed the language may justly be adopted, '`Great and marvellous are your works,
 Lord God Almighty.
 Just and true are your ways,
-O King of saints.`' "`To relate all I have passed through from various causes,
+O King of saints.`' To relate all I have passed through from various causes,
 would take much time and paper, and I do not feel much inclination to attempt it.
 Let it lie buried in the deep recesses of my heart until called for,
 for the benefit of poor tried travellers, or to have recourse to, for my own instruction,
@@ -363,7 +363,7 @@ in all of which she was strengthened to labour,
 under the influence of that pure love which seasoned
 her communications and evidently made way for them,
 to the edification or comfort of others, and to the peace of her mind.
-The 8th of the second month, she went to Frank ford, where, being more unwell,
+The 8th of the second month, she went to Frankford, where, being more unwell,
 and having a rash out, and the weather being cold,
 she did not attend the week-day meeting;
 but in the afternoon being met by her dear friend Sarah Harrison,
@@ -573,7 +573,7 @@ and would not permit her to lie in that quiet easy state of mind.
 With this remark Sarah seemed satisfied.
 Her strength was much decayed; and on the 26th of the fourth month, which was second-day,
 her breathing was become difficult and painful, and she felt great oppression of body.
-"`This, said she, is wearing work:`" but nevertheless she lay very still,
+"`This,`" said she, "`is wearing work:`" but nevertheless she lay very still,
 as she had been enabled to do during the whole of her illness;
 and several times desired not to be disturbed.
 After a hard fit of coughing, with a discharge of phlegm, which left her much spent,
