--- a/life/modernized/11-wiltshire-testimony.adoc
+++ b/life/modernized/11-wiltshire-testimony.adoc
@@ -39,7 +39,7 @@ of paying a religious visit to Friends in America.
 This undertaking seemed arduous;
 more especially as her natural strength at that time had much declined;
 but as she observed, it seemed of no consequence to her where her life might close,
-so that when the solemn period came,`' she was but where and what she ought to be.
+so that when the solemn period came, she was but where and what she ought to be.
 
 She was much satisfied with having come to that land, which appears by a message which,
 a few days before her close,
