--- a/life/original/05-chapter-4.adoc
+++ b/life/original/05-chapter-4.adoc
@@ -486,7 +486,7 @@ and it does not appear that they visited any meeting in South Wales.
 That at Builth was a public appointed one,
 of which Sarah gives nearly the following account:
 
-"`The 6th of the fifth month we had a meeting at Builth, not in a meeting-house,
+"`The 6th of the fifth month we had a meeting at Builth, not in a meetinghouse,
 but in a very convenient graveyard.
 Notice having been given in the neighbourhood some days before,
 many well-behaved people came.
