update 'espy/espied' in modernized editions

--- a/life/modernized/10-chapter-9.adoc
+++ b/life/modernized/10-chapter-9.adoc
@@ -253,7 +253,7 @@ that no reflection may be cast on those who have certified for me,
 nor on those who publicly or privately expressed their unity and tender sympathy;
 but above all, that the blessed cause may have no shade brought on it through me.
 
-"`About five o`'clock in the afternoon, the 28th, the captain espied land,
+"`About five o`'clock in the afternoon, the 28th, the captain caught sight of land,
 which proved to be Long Island.
 It was seen pretty clearly; but the wind being quite ahead, we could not get forward:
 a light squall in the evening.
