update spelling: heart-felt > heartfelt

--- a/life/modernized/01-preface.adoc
+++ b/life/modernized/01-preface.adoc
@@ -13,7 +13,7 @@ in order that Truth might be exalted in the earth,
 yet the sweet and frequent enjoyment of Divine peace was her abundant reward.
 
 May the perusal of these memoirs so affect the youth, into whose hands they may fall,
-with the love and admiration of Christian virtue, as to raise a heart-felt petition,
+with the love and admiration of Christian virtue, as to raise a heartfelt petition,
 similar to that which Sarah herself, when a child, was engaged to put up,
 when she was reading the lives, and happy conclusions of the faithful:
 "`Often,`" said she, "`have I been led to make a pause, and crave of my heavenly Father,
