modernize archaic usages of 'issue'

--- a/life/modernized/11-wiltshire-testimony.adoc
+++ b/life/modernized/11-wiltshire-testimony.adoc
@@ -53,7 +53,7 @@ that I find the Lord`'s tenderly concerned baptized travailing children,
 to be the same everywhere; and though from my present weak state,
 it is rather unlikely I shall ever see them again in mutability,
 I am perfectly satisfied with being with Friends in this land,
-and quite easy as to the issue of this my present indisposition;
+and quite easy as to the outcome of this my present indisposition;
 desiring the Lord`'s will may be done.`"
 
 During her illness she said that, though it was desirable to her to go,
