fix automated modernization error: you wilt > you will

--- a/life/modernized/01-preface.adoc
+++ b/life/modernized/01-preface.adoc
@@ -19,7 +19,7 @@ when she was reading the lives, and happy conclusions of the faithful:
 "`Often,`" said she, "`have I been led to make a pause, and crave of my heavenly Father,
 be pleased to make me like unto these your servants,
 whatever my sufferings in this life may be.
-If you wilt be with me in the way that I go, give me bread to eat, and raiment to put on,
+If you will be with me in the way that I go, give me bread to eat, and raiment to put on,
 you shall be my God, and I will serve you.`"
 Thus making and keeping covenant in early life,
 she witnessed the declaration to be fulfilled, "`Godliness is profitable to all things,
