--- a/life/modernized/10-chapter-9.adoc
+++ b/life/modernized/10-chapter-9.adoc
@@ -552,7 +552,7 @@ Sarah seemed almost overcome with joy; and said, '`Now how glad I am, how glad I
 that you hast told me this.
 It is enough, Oh,
 it is a great comfort to me.. Now I hope my good Master will soon take me to rest;
-and you wilt be supported and rewarded.
+and you will be supported and rewarded.
 There is little here but trials, disappointments and conflicts.
 Now don`'t hold me, my dear.`"
 Then she seemed as if she would soon sink away; but was heard to say, in a low,
